# Projekt

./: MyCamera.yaml  komendy.txt  stella_vslam_ros.cc
Init_pose_publisher/: CMakeLists.txt  package.xml
Init_pose_publisher/src/: publish_init_pose_main.cpp  publish_transform.cpp
bags/data4/: metadata.yaml
test_package/: CMakeLists.txt  package.xml
test_package/include/test_package/: test_header.hpp
test_package/src/: test_source.cpp
